# winshot

./: README.md  README_EN.md  pyproject.toml  winshot.py  截图.py
docs/: index.html
winshot/: __init__.py  截图.py
