[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winshot"
version = "1.0.1"
description = "Windows screenshot library using WinAPI - supports BitBlt, StretchBlt, PrintWindow methods"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.8"
authors = [
    { name = "E5C8F" }
]
keywords = ["screenshot", "windows", "winapi", "bitblt", "printwindow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]

[project.urls]
Homepage = "https://e5c8f.github.io/winshot"
Repository = "https://github.com/E5C8F/winshot"
Issues = "https://github.com/E5C8F/winshot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["winshot*"]

